--- a/stadium/static/css/book_stadium.css
+++ b/stadium/static/css/book_stadium.css
@@ -1,6 +1,16 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
 .col {
     display: flex;
     flex-direction: column;
+}
+
+.content {
+    display: flex;
 }
 
 .day {
@@ -19,23 +29,103 @@
 
 .stadium-timeframe {
     margin-bottom: 50px;
+    margin-left: 10px;
 }
 
-.stadium-timeframe h3 {
-    margin-right: 80px;
+.stadium-timeframe h3
     height: 35px;
-    border-bottom: 2px solid black;
+
 }
 
 .stadium-detail {
     margin-right: 40px;
 }
 
-.style {
+.card.style {
     margin-right: 20px;
     margin-bottom: 20px;
 }
 
+.card.style button {
+    width: 35%;
+    height: 35px;
+    border-radius: 7px;
+    background: white;
+    margin-bottom: 20px;
+    margin-left: 10px;
+}
+
 #title {
     text-align: center;
+}
+
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-submit {
+    width: 30%;
+}
+
+.btn.style-btn {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dropdown-menu.show {
+    display: block;
+    width: 100%;
+}
+
+.form-1 {
+    margin-top: 60px;
+}
+
+.form-1 form {
+    display: flex;
+    flex-direction: column;
+    align-items: initial;
+}
+
+.form-1 form button {
+    width: 30%;
+}
+
+.submit-btn  {
+    text-align: center;
+}
+
+.form-2 {
+    margin-top: 270px;
+}
+
+.form-style {
+    width: 80%;
+    margin: auto;
+}
+
+.book-stadium-btn {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    background: rgba(0, 0, 0, 0.5);
+    transition: 0.5s easy;
+    opacity: 0;
+}
+
+.hover-img {
+    position: relative;
+}
+
+.hover-img:hover .book-stadium-btn {
+    opacity: 1;
+}
+
+.modal-footer {
+    justify-content: flex-end;
 }
