--- a/stadium/book_stadium/templates/book_stadium/base.html
+++ b/stadium/book_stadium/templates/book_stadium/base.html
@@ -107,11 +107,11 @@
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header base">
           <h5 class="modal-title" id="staticBackdropLabel">Đăng nhập</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body base">
           <form action="{% url 'login' %}" method="POST">
             {% csrf_token %}
             <div class="inputs">
@@ -148,7 +148,7 @@
                 {{message}}
             </div>
 		{% endfor %} -->
-        <div class="modal-footer">
+        <div class="modal-footer base">
           <a href="#">Quên mật khẩu</a>
           <a href="#" onclick="turnOnModalRegister()">Tạo tài khoản mới</a>
         </div>
@@ -160,7 +160,7 @@
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header base">
           <h5 class="modal-title">Đăng ký</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
